Add some annotations and make message log public